# zsc-llm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
samples/: label_descs.json  label_descs_dense.json  labels_min.txt  long_example.txt  stress_texts.txt
src/zsc_llm/: __init__.py  cli.py  nb_method.py
tests/: test_basic.py
